[package]
name = "chating"
version = "0.0.1"
authors = ["alex <liuhlightning@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.5"
thiserror = "1.0"

[dev-dependencies]
proptest = "0.10"
solana-sdk = "1.9.5"

[lib]
crate-type = ["cdylib", "lib"]
